--- a/_includes/person.html
+++ b/_includes/person.html
@@ -3,18 +3,17 @@
 {% if person.key == include.key  or person.role == include.role %}
 <p class="person-list-block">
     <!--<img alt="{{ person.first_name }} {{ person.last_name }}" class="person-image-small" src="{{ person.image }}">-->
-    
+
     {% capture name %}{{ person.first_name }} {{ person.last_name }}{% endcapture %}
 
-	{% if person.role == "alumnus" %}
-    <span class="name">
-      <a href="{{ person.website }}">{{ name }}</a>
-    </span>
-    {% endif %}
 
-	{% if person.role != "alumnus" %}
-	<span class="name">
+    {% if person.role != "alumnus" %}
+    <span class="name">
+        {% if person.website %}
       <a href="{{ person.website }}">{{ name }}</a>
+        {% else %}
+        {{ name }}
+        {% endif %}
       
       <span class="spacer">
         {% capture numDots %}{{name | size | minus: 23 | times: -1}}{% endcapture %}
@@ -25,11 +24,11 @@
         {% endfor %}
       </span>
     </span>
-    
+
     <span class="interests">
       {{person.interests}}
     </span>
-	{% endif %}
+    {% endif %}
 </p>
 {% endif %}
 {% endif %}
