--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -6,8 +6,17 @@ layout: default
 </div>
 
   <article class="publications-content">
-	
-	 <h1>Peer-Reviewed Journal and Conference Papers </h1>
+
+    <h1>Preprints</h1>
+
+    {% for publication in site.publications reversed %}
+    {% if publication.type == "preprint" %}
+    {% include publication_list_entry.html %}
+    {% endif %}
+    {% endfor %}
+
+
+    <h1>Peer-Reviewed Journal and Conference Papers </h1>
     
     {% for publication in site.publications reversed %}
       {% if publication.type == "paper" %}
