--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -2,6 +2,38 @@
 layout: default
 ---
 
+<!-- FLAGS TO DETERMINE WHAT TO RENDER -->
+{% for publication in site.publications reversed %}
+{% if publication.type == "preprint" %}
+{% for author in publication.authors %}
+{% if author == page.key %}
+{% assign haspreprints = 'true' %}
+{% endif %}
+{% endfor %}
+{% endif %}
+{% endfor %}
+
+{% for publication in site.publications reversed %}
+{% if publication.type == "paper" %}
+{% for author in publication.authors %}
+{% if author == page.key %}
+{% assign haspublications = 'true' %}
+{% endif %}
+{% endfor %}
+{% endif %}
+{% endfor %}
+
+{% for talk in site.talks reversed %}
+{% if talk.speaker == page.key %}
+{% assign hastalks = 'true' %}
+{% endif %}
+{% endfor %}
+
+{% for article in site.data.press %}
+{% if article.user == page.key %}
+{% assign haspress = 'true' %}
+{% endif %}
+{% endfor %}
 
 <div class="person">
     <header class="person-title"><h1>{{page.first_name}} {{page.last_name}}</h1></header>
@@ -14,6 +46,7 @@ layout: default
 
     {{ page.content }}
 
+    {% if hastalks == "true" %}
     <br>
     <div stye="width:100%, float:none">
     <span class="home-button nav-text">
@@ -30,6 +63,7 @@ layout: default
     </span>
     </div>
     <br>
+    {% endif %}
 
 
 </article>
@@ -49,18 +83,28 @@ layout: default
     </p>
 
     <p>
+        {% if page.cv %}
         <a href="{{page.cv}}">Curriculum Vitae</a><br>
+        {% endif %}
+        {% if page.gs %}
         <a href="{{ page.gs }}">Google Scholar</a><br>
+        {% endif %}
+        {% if page.twitter %}
         <a href="http://twitter.com/{{page.twitter}}">Twitter</a><br>
-        <a href="{{page.gh}}">GitHub</a><br>
+        {% endif %}
+        {% if page.github %}
+        <a href="{{page.github}}">GitHub</a><br>
+        {% endif %}
     </p>
 </article>
 
 
 <article  class="publication-content">
 
-
+    {% if haspublications == "true" or haspreprints == "true" %}
     <h2 id="publications">Publications</h2>
+
+    {% if haspreprints == "true" %}
     <h3>Preprints</h3>
     {% for publication in site.publications reversed %}
     {% if publication.type == "preprint" %}
@@ -71,7 +115,9 @@ layout: default
     {% endfor %}
     {% endif %}
     {% endfor %}
+    {% endif %}
 
+    {% if haspublications == "true" %}
     <h3>Peer-reviewed Journal and Conference Publications</h3>
     {% for publication in site.publications reversed %}
     {% if publication.type == "paper" %}
@@ -82,7 +128,11 @@ layout: default
     {% endfor %}
     {% endif %}
     {% endfor %}
+    {% endif %}
 
+    {% endif %}
+
+    {% if hastalks == "true" %}
     <h2 id="talks">Talks</h2>
     <h3>Invited Talks</h3>
     {% for talk in site.talks reversed %}
@@ -111,7 +161,9 @@ layout: default
     {% endif %}
     {% endfor %}
 
+    {% endif %}
 
+    {% if page.showteaching %}
 
     <h2 id="teaching">Teaching</h2>
 
@@ -135,10 +187,16 @@ layout: default
 
     {% include courses.html instructor=page.key %}
 
+    {% endif %}
+
+
+    {% if haspress == "true" %}
+
     <h2 id="press">Press</h2>
 
     {% include press.html user=page.key %}
 
+    {% endif %}
 
 </article>
 
