--- a/css/site.scss
+++ b/css/site.scss
@@ -274,7 +274,7 @@ body {
   @include navigation-button($download-color);
 }
 
-.help-button {
+.positions-button {
   @include navigation-button($help-color);
 }
 
