--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -78,22 +78,29 @@ layout: default
     {{ page.position}} <br>
     <p>
         <b>Contact</b> <br>
-        <a href="mailto:{{ page.email }}">{{ page.email }}</a> <br>
-        {{ page.address }}
+        <a href="mailto:{{ page.email }}"><i class="fa fa-envelope"></i> {{ page.email }}</a> <br>
+        SCI Institute, <br>
+        School of Computing, <br>
+        University of Utah <br>
+        <a href="https://www.google.com/maps/place/Scientific+Computing+and+Imaging+Institute+(SCI+Institute)/@40.7682198,-111.876249,14.58z/data=!4m8!1m2!3m1!2sScientific+Computing+and+Imaging+Institute+(SCI+Institute)!3m4!1s0x0:0xed3af30fcd0bf927!8m2!3d40.7677941!4d-111.8449938"><i class="fa fa-map-marker"></i> 72 South Central Campus Drive,<br>
+            Salt Lake City, Utah 84112 </a><br>
+        {% if page.room %}
+        Room: {{ page.room }}
+        {% endif %}
     </p>
 
     <p>
         {% if page.cv %}
-        <a href="{{page.cv}}">Curriculum Vitae</a><br>
+        <a href="{{page.cv}}"><i class="fa fa-file-text"></i> Curriculum Vitae</a><br>
         {% endif %}
         {% if page.gs %}
-        <a href="{{ page.gs }}">Google Scholar</a><br>
+        <a href="{{ page.gs }}"><i class="fa fa-google"></i> Google Scholar</a><br>
         {% endif %}
         {% if page.twitter %}
-        <a href="http://twitter.com/{{page.twitter}}">Twitter</a><br>
+        <a href="http://twitter.com/{{page.twitter}}"><i class="fa fa-twitter"></i> Twitter</a><br>
         {% endif %}
         {% if page.github %}
-        <a href="{{page.github}}">GitHub</a><br>
+        <a href="{{page.github}}"><i class="fa fa-github"></i> GitHub</a><br>
         {% endif %}
     </p>
 </article>
