more broken links fixed.

--- a/_layouts/thesis.html
+++ b/_layouts/thesis.html
@@ -46,7 +46,7 @@ layout: default
 
     {%if page.bibtex %}
     <p>
-      <a href="{{ page.bibtex }}">BibTeX</a>
+      <a href="{{ site.paper_content_url }}{{ page.bibtex }}">BibTeX</a>
     </p>
     {% endif %}
   </article>
