remove jquery dependency and unused slick carousel

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -166,14 +166,12 @@ layout: default
       //
       //     var pub = publications[i];
       //     i++;
-      //     var bannerImg = $(id + " img");
-      //     bannerImg.attr("alt", pub.shortname)
+      //     var bannerImg = document.querySelector(id + " img");
+      //     bannerImg.alt = pub.shortname;
+      //     bannerImg.src += pub.image_large;
       //
-      //     var src = bannerImg.attr("src");
-      //     bannerImg.attr("src", src + pub.image_large);
-      //
-      //     var bannerLink = $(id + "  a")
-      //     bannerLink.attr("href", pub.url);
+      //     var bannerLink = document.querySelector(id + "  a")
+      //     bannerLink.href = pub.url;
       //
       //     // // shorten title of too long
       //     // var titleLength = -1;
@@ -186,8 +184,8 @@ layout: default
       //     //     pub.title = pub.title.substring(0, titleLength) + "...";
       //     // }
       //
-      //     var bannerText = $(id + " span")
-      //     bannerText.text(pub.title);
+      //     var bannerText = document.querySelector(id + " span")
+      //     bannerText.innerText = pub.title;
       // });
 
   </script>
