--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -145,20 +145,24 @@ layout: default
     {% endif %}
     {% endfor %}
 
-  <script src="http://code.jquery.com/jquery-latest.min.js"
-          type="text/javascript"></script>
   <script>
   	 //on load
   	 responsive_change_box_order();
   	 //on resize
    	 window.addEventListener('resize', responsive_change_box_order );
 	 
+   // prepend an element before another
+   function prependElement (element, target) {
+     target.parentNode.insertBefore(element, target)
+   }
+
 	 function responsive_change_box_order() {
+      var image = document.querySelector('#publication-image')
 	    if (window.matchMedia("(max-width: 749px)").matches) {
-	        jQuery("#publication-image").remove().prependTo(jQuery(".publication-content-main"));
+        prependElement(image, document.querySelector('.publication-content-main'))
 	    }
 	    else{
-	        jQuery("#publication-image").remove().prependTo(jQuery(".publication-content-aside"));
+        prependElement(image, document.querySelector('.publication-content-aside h1'))
 	    }
 	  }
       // var i = 0;
