--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -13,6 +13,7 @@ layout: default
     <div class="citation">
       <p>
 
+        {% assign bibauthors = '' %}
         {% for author in page.authors %}
 
         {% assign known = false %}
@@ -20,12 +21,23 @@ layout: default
         {% if author == person.key %}
         <a href="{{ person.website }}">{{ person.first_name }}&nbsp;{{ person.last_name }}</a>{% if author != page.authors.last%}, {% endif %}
 
+        {% if author == page.authors.first %}
+          {% assign bibauthors = person.first_name | append: ' ' | append: person.last_name %}
+        {% else %}
+          {% assign bibauthors = bibauthors | append: ' and ' | append: person.first_name | append: ' ' | append: person.last_name %}
+        {% endif %}
+
         {% assign known = true %}
         {% endif %}
         {% endfor %}
 
         {% if known == false %}
         {{ author }}{% if author != page.authors.last%}, {% endif %}
+        {% if author == page.authors.first %}
+          {% assign bibauthors = author %}
+        {% else %}
+          {% assign bibauthors = bibauthors | append: ' and ' | append: author %}
+        {% endif %}
         {% endif %}
 
         {% endfor %}
