--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -120,9 +120,9 @@ layout: default
 
     <h1>Resources</h1>
     <ul>
-    {% if page.doi %}
+    {% if page.bib.doi %}
     <li>
-      <i class="fa fa-globe"></i> &nbsp;<a href="http://dx.doi.org/{{ page.doi }}">Publisher</a>
+      <i class="fa fa-globe"></i> &nbsp;<a href="http://dx.doi.org/{{ page.bib.doi }}">Publisher</a>
     </li>
     {% elsif page.publisher %}
     <li>
