--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -46,7 +46,7 @@ layout: default
         <br/>
         <span class="paper-title">
 		<b>{{page.title}}</b></span><br/>
-        <span class="paper-citation">{{ page.journal }}, {% if page.doi %} <a href="http://dx.doi.org/{{ page.doi }}">doi:{{ page.doi }}</a>, {%endif%}
+        <span class="paper-citation">{{ page.journal }}, {% if page.bib.doi %} <a href="http://dx.doi.org/{{ page.bib.doi }}">doi:{{ page.bib.doi }}</a>, {%endif%}
         {{ page.year }}.</span>
 
 
@@ -109,9 +109,9 @@ layout: default
 
     <h1>Resources</h1>
     <ul>
-    {% if page.doi %}
+    {% if page.bib.doi %}
     <li>
-      <i class="fa fa-globe"></i> &nbsp;<a href="http://dx.doi.org/{{ page.doi }}">Publisher</a>
+      <i class="fa fa-globe"></i> &nbsp;<a href="http://dx.doi.org/{{ page.bib.doi }}">Publisher</a>
     </li>
     {% elsif page.publisher %}
     <li>
