render theses from the publication folder as a special type

--- a/_includes/publication_list_entry.html
+++ b/_includes/publication_list_entry.html
@@ -21,9 +21,14 @@
         {% endif %}
 
         {% endfor %}
-		<br/>
+        <br/>
         <span class="paper-title"><a href="{{ site.baseurl }}{{ publication.url }}">{{ publication.title }}</a></span><br/>
-        {{ publication.journal }}, {{publication.year}}
+        {% if publication.type == "thesis" %}
+          {{ publication.institution }}, {{ publication.thesis_type }},
+        {% else %}
+          {{ publication.journal }},
+        {% endif %}
+        {{ publication.year }}
 
         {%if publication.award %}
         <br>
