--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -34,32 +34,10 @@ layout: default
 
     <h1>Theses </h1>
 
-
-    {% for thesis in site.thesis reversed %}
-
-    <div class="paper-list-block">
-
-      <img alt="{{ thesis.shortname }} screenshot" class="paper-image-small" src="{{ site.baseurl }}{{ thesis.image }}">
-
-      <p>
-        {% assign known = false %}
-        {% for person in site.persons %}
-        {% if person.key == thesis.author %}
-        <a href="{{ person.website }}">{{ person.first_name }} {{ person.last_name }}</a>
-
-        {% assign known = true %}
-
-        {% if known == false %}
-        {{ author }}
-        {% endif %}
-        {% endif %}
-        {% endfor %} <br/>
-        <span class="paper-title"><a href="{{ site.baseurl }}{{ thesis.url }}">{{ thesis.title }}</a></span><br/>
-        {{ thesis.institution }}, {{thesis.thesis_type}}, {{thesis.year}}
-      </p>
-
-    </div>
-
+    {% for publication in site.publications reversed %}
+      {% if publication.type == "thesis" %}
+        {% include publication_list_entry.html %}
+      {% endif %}
     {% endfor %}
 
     <!-- <h1>Commentaries, Editorials, Book Chapters & Published Abstracts </h1>-->
