use more generic publication name for pdfs

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -99,7 +99,7 @@ layout: default
 
     {% if page.pdf %}
     <li>
-      <i class="fa fa-file-text"></i> &nbsp;<a href="{{site.paper_content_url}}{{ page.pdf }}">Paper (PDF)</a>
+      <i class="fa fa-file-text"></i> &nbsp;<a href="{{site.paper_content_url}}{{ page.pdf }}">Publication (PDF)</a>
     </li>
     {% endif %}
     {% if page.supplement %}
