--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -32,7 +32,7 @@ layout: default
       {% endif %}
     {% endfor %}
 
-    <h1>Theses </h1>
+    <h1> Dissertations and Theses </h1>
 
     {% for publication in site.publications reversed %}
       {% if publication.type == "thesis" %}
