--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -33,10 +33,21 @@ layout: default
 
         <br/>
         <span class="paper-title">
-		<b>{{page.title}}</b></span><br/>
-        <span class="paper-citation">{{ page.journal }}, {% if page.doi %} <a href="http://dx.doi.org/{{ page.doi }}">doi:{{ page.doi }}</a>, {%endif%}
-        {{ page.year }}.</span>
+    <b>{{page.title}}</b></span><br/>
 
+        {% if page.type == "thesis" %}
+          <span class="advisors">
+            <em>Advisors:</em> {{ page.advisors }}
+          </span><br />
+        {% endif %}
+
+        <span class="paper-citation">
+        {% if page.type == "thesis" %}
+          {{ page.institution }}, {{ page.thesis_type }}, {{ page.month }} {{ page.year }}.
+        {% else %}
+          {{ page.journal }}, {% if page.doi %} <a href="http://dx.doi.org/{{ page.doi }}">doi:{{ page.doi }}</a>, {%endif%}{{ page.year }}.
+        {% endif %}
+        </span>
 
       {%if page.award %}
       <br>
@@ -44,7 +55,7 @@ layout: default
         <span class="fa fa-trophy"></span>&nbsp;{{page.award}}
       </span>
       {% endif %}
-      </p>
+      </span>
       {%if page.note %}
       <p class="note" style="font-style:italic;">
         <b>Note:</b> {{page.note}}
