--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -128,9 +128,9 @@ layout: default
     <li>
       <i class="fa fa-globe"></i> &nbsp;<a href="http://dx.doi.org/{{ page.bib.doi }}">Publisher</a>
     </li>
-    {% elsif page.publisher %}
+    {% elsif page.publisherURL %}
     <li>
-      <i class="fa fa-globe"></i> &nbsp;<a href="{{page.publisher}}">Publisher</a>
+      <i class="fa fa-globe"></i> &nbsp;<a href="{{page.publisherURL}}">Publisher</a>
     </li>
     {% endif %}
 
