style the bibtex on each pub page

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -84,6 +84,7 @@ layout: default
       </p>
       {% endif %}
 
+      <h1>BibTeX</h1>
 {% capture newLine %}
 {% endcapture %}
 <pre class="bibtex">
