update references to publication images in new directory

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -101,7 +101,7 @@ layout: default
   </article>
 
   <article class="publication-content-aside">
-	<img id="publication-image" alt="{{ page.shortname }} screenshot" class="paper-image-small-aside" src="{{ site.baseurl }}/assets/images/papers/{{ page.image }}">
+	<img id="publication-image" alt="{{ page.shortname }} screenshot" class="paper-image-small-aside" src="{{ site.baseurl }}/assets/images/publications/{{ page.image }}">
     {% if page.project %}
     <h1>Software</h1>
     <ul class="project-icon-list">
