--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,7 +3,7 @@
         
         <div id="main-banner-image">
             <a class="banner-image" href="">
-                <img alt="" class="left-banner-image" src="{{ site.baseurl }}/assets/images/papers/"/>
+                <img alt="" class="left-banner-image" src="{{ site.baseurl }}/assets/images/publications/"/>
                 <span id="left-banner-image-title" class="banner-image-title"></span>
             </a>
         </div>
@@ -11,13 +11,13 @@
         <div id="top-right-banner-image">
             <a class="banner-image" href="">
                 <span id="top-right-banner-image-title" class="banner-image-title"></span>
-                <img alt="" class="top-right-banner-image" src="{{ site.baseurl }}/assets/images/papers/">
+                <img alt="" class="top-right-banner-image" src="{{ site.baseurl }}/assets/images/publications/">
             </a>
         </div>
 
         <div id="bottom-right-banner-image">
             <a class="banner-image" href="">
-                <img alt="" class="bottom-right-banner-image" src="{{ site.baseurl }}/assets/images/papers/">
+                <img alt="" class="bottom-right-banner-image" src="{{ site.baseurl }}/assets/images/publications/">
                 <span id="bottom-right-banner-image-title" class="banner-image-title"></span>
             </a>
         </div>
