--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -67,7 +67,7 @@
 
   <article class="home-content-aside">
 	  
-	  <h1>Recent Papers</h1>
+	  <h1>Recent Publications</h1>
 	  	  
 	      <ul class="publication-icon-list">
               {% assign sorted_publications = (site.publications | sort: 'year' %}
