--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -74,7 +74,7 @@
                 Copyright &copy; 2016 The Visualization Design Lab. All content on this website is licensed under
                 the <br/>
                 <a href="http://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution license
-                    (CC BY)</a>. Copyright of the linked papers is with the publishers. Logo by <a
+                    (CC BY)</a>. Copyright of the linked publications is with the publishers. Logo by <a
                     href="http://www.antarctic-design.co.uk">Antarctic Design</a>.
             </p>
         </div>
