updated color of bibtex box/font

--- a/css/site.scss
+++ b/css/site.scss
@@ -1125,8 +1125,8 @@ iframe {
 pre.bibtex {
   padding: 20px;
   overflow-x: auto;
-  background: $dark-blue;
-  color: #FFF;
+  background: #f3f3f3;
+  color: #636363;
 }
 
 // team page in separate sass file
