--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -87,11 +87,12 @@ layout: default
       <h1>BibTeX</h1>
 {% capture newLine %}
 {% endcapture %}
+      <!-- here replacing the curly brackets with html special characters. { is &#123; ; } is &#125; -->
 <pre class="bibtex">
-@{{ page.bibentry }}{ {{ page.key }},
-  title = { {{ page.title }} },
-  author = { {{ bibauthors }} },
-{% for bibItem in page.bib %}{% if bibItem[1] %}  {{ bibItem[0] }} = { {{ bibItem[1] }} },{{ newLine }}{% endif %}{% endfor %}  year = { {{ page.year }} }
+@{{ page.bibentry }}&#123;{{ page.key }},
+  title = &#123;{{ page.title }}&#125;,
+  author = &#123;{{ bibauthors }}&#125;,
+{% for bibItem in page.bib %}{% if bibItem[1] %}  {{ bibItem[0] }} = &#123;{{ bibItem[1] }}&#125;,{{ newLine }}{% endif %}{% endfor %}  year = &#123;{{ page.year }}&#125;
 }
 </pre>
     </div>
