--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -23,8 +23,17 @@ layout: default
         {% include publication_list_entry.html %}
       {% endif %}
     {% endfor %}
-      
-    <h1>Posters </h1>
+
+
+    <h1>Commentary</h1>
+
+    {% for publication in site.publications reversed %}
+    {% if publication.type == "commentary" %}
+    {% include publication_list_entry.html %}
+    {% endif %}
+    {% endfor %}
+
+    <h1>Selected Posters</h1>
     
     {% for publication in site.publications reversed %}
       {% if publication.type == "poster" %}
@@ -32,7 +41,7 @@ layout: default
       {% endif %}
     {% endfor %}
 
-    <h1> Dissertations and Theses </h1>
+    <h1>Dissertations and Theses</h1>
 
     {% for publication in site.publications reversed %}
       {% if publication.type == "thesis" %}
