add click support from name block to image though scrolling isnt perfect

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -87,3 +87,9 @@ layout: default
       
   </article>
 
+<script>
+  // use a person's key to go to their anchor tag
+  function selectPerson (key) {
+    window.location.hash = key
+  }
+</script>
