--- a/_includes/person.html
+++ b/_includes/person.html
@@ -1,7 +1,7 @@
 {% for person in site.persons %}
 {% if person.graduated == null %}
 {% if person.key == include.key  or person.role == include.role %}
-<p class="person-list-block" id="{{ person.key }}">
+<p class="person-list-block" id="{{ person.key }}" onclick="selectPerson(this.id)">
     <!--<img alt="{{ person.first_name }} {{ person.last_name }}" class="person-image-small" src="{{ person.image }}">-->
 
     {% capture name %}{{ person.first_name }} {{ person.last_name }}{% endcapture %}
