improve person block to name linking by scrolling image into view

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -91,5 +91,6 @@ layout: default
   // use a person's key to go to their anchor tag
   function selectPerson (key) {
     window.location.hash = key
+    document.querySelector('a.personKey.' + key).scrollIntoView()
   }
 </script>
