--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -90,7 +90,26 @@ layout: default
 <script>
   // use a person's key to go to their anchor tag
   function selectPerson (key) {
+    // unselect any people
+    var allImages = document.querySelectorAll('a.personKey img')
+    var allBlocks = document.querySelectorAll('.person-list-block')
+    if (allImages.length > 0) {
+      [].forEach.call(allImages, function (img) {
+        img.classList.remove('selected')
+      })
+    }
+    if (allBlocks.length > 0) {
+      [].forEach.call(allBlocks, function (block) {
+        block.classList.remove('selected')
+      })
+    }
+
+    // update for new selection
     window.location.hash = key
     document.querySelector('a.personKey.' + key).scrollIntoView()
+
+    // use 'selection' class for marking image and person-block
+    document.querySelector('a.personKey.' + key + ' img').classList.add('selected')
+    document.querySelector('#' + key).classList.add('selected')
   }
 </script>
