--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -84,6 +84,10 @@
       @include span-columns(4)
     }
   }
+  &.selected {
+    border: 2px solid $team-color;
+    background: #EEE;
+  }
 }
 
 .banner-team {
@@ -124,6 +128,9 @@
   &.color3 {
     border-color: #E66558;
   }
+  &.selected {
+    border-width: 7px;
+  }
 }
 
 .person-image-large {
@@ -152,5 +159,10 @@
   margin-bottom: 25px;
   &.offset0 {
     margin-bottom: 75px;
+  }
+  &.selected {
+    width: 80px;
+    height: 80px;
+    border-width: 10px;
   }
 }
