--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -91,18 +91,7 @@ layout: default
   // use a person's key to go to their anchor tag
   function selectPerson (key) {
     // unselect any people
-    var allImages = document.querySelectorAll('a.personKey img')
-    var allBlocks = document.querySelectorAll('.person-list-block')
-    if (allImages.length > 0) {
-      [].forEach.call(allImages, function (img) {
-        img.classList.remove('selected')
-      })
-    }
-    if (allBlocks.length > 0) {
-      [].forEach.call(allBlocks, function (block) {
-        block.classList.remove('selected')
-      })
-    }
+    clearClass('selected')
 
     // update for new selection
     window.location.hash = key
@@ -111,5 +100,28 @@ layout: default
     // use 'selection' class for marking image and person-block
     document.querySelector('a.personKey.' + key + ' img').classList.add('selected')
     document.querySelector('#' + key).classList.add('selected')
+  }
+
+  // highlight people temporarily
+  function highlightPerson (key) {
+    // use 'highlighted' class for marking image and person-block
+    document.querySelector('a.personKey.' + key + ' img').classList.add('highlighted')
+    document.querySelector('#' + key).classList.add('highlighted')
+  }
+
+  // clear desired class from people images and blocks
+  function clearClass (name) {
+    var allImages = document.querySelectorAll('a.personKey img')
+    var allBlocks = document.querySelectorAll('.person-list-block')
+    if (allImages.length > 0) {
+      [].forEach.call(allImages, function (img) {
+        img.classList.remove(name)
+      })
+    }
+    if (allBlocks.length > 0) {
+      [].forEach.call(allBlocks, function (block) {
+        block.classList.remove(name)
+      })
+    }
   }
 </script>
