move hover events to images so the hitbox is improved

--- a/_includes/team_header.html
+++ b/_includes/team_header.html
@@ -3,20 +3,20 @@
 {% for person in site.persons %}
 {% if person.graduated %}
 {% elsif person.role == "faculty" %}
-  <a class="personKey {{ person.key}}" href="#{{ person.key }}" onclick="selectPerson('{{ person.key }}')" onmouseenter="highlightPerson('{{ person.key }}')" onmouseleave="clearClass('highlighted')">
+  <a class="personKey {{ person.key}}" href="#{{ person.key }}" onclick="selectPerson('{{ person.key }}')">
   {% if person.image %}
-    <img alt="{{ person.first_name }} {{ person.last_name }}" class="person-img person-image offset{{iter}}" title="{{ person.first_name }} {{ person.last_name }}" src="{{ site.baseurl }}{{ person.image }}">
+    <img alt="{{ person.first_name }} {{ person.last_name }}" class="person-img person-image offset{{iter}}" title="{{ person.first_name }} {{ person.last_name }}" src="{{ site.baseurl }}{{ person.image }}" onmouseenter="highlightPerson('{{ person.key }}')" onmouseleave="clearClass('highlighted')">
   {% else %}
-    <img alt="{{ person.first_name }} {{ person.last_name }}" class="person-img person-image offset{{iter}}" title="{{ person.first_name }} {{ person.last_name }}" src="http://www.centonovelosgatos.com/wp-content/uploads/2013/08/unknown-female.jpg">
+    <img alt="{{ person.first_name }} {{ person.last_name }}" class="person-img person-image offset{{iter}}" title="{{ person.first_name }} {{ person.last_name }}" src="http://www.centonovelosgatos.com/wp-content/uploads/2013/08/unknown-female.jpg" onmouseenter="highlightPerson('{{ person.key }}')" onmouseleave="clearClass('highlighted')">
   {% endif %}
   </a>
   {% assign iter = iter | plus: 1 | modulo: 2 %}
 {% elsif person.role == "postdoc" or person.role == "phdstudent" or person.role == "phd_rotation" or person.role == "msstudent" or person.role == "undergrad" %}
-  <a class="personKey {{ person.key}}" href="#{{ person.key }}"  onclick="selectPerson('{{ person.key }}')" onmouseenter="highlightPerson('{{ person.key }}')" onmouseleave="clearClass('highlighted')">
+  <a class="personKey {{ person.key}}" href="#{{ person.key }}"  onclick="selectPerson('{{ person.key }}')">
   {% if person.image %}
-    <img alt="{{ person.first_name }} {{ person.last_name }}" class="person-img person-image-small offset{{iter}}" title="{{ person.first_name }} {{ person.last_name }}" src="{{ site.baseurl }}{{ person.image }}">
+    <img alt="{{ person.first_name }} {{ person.last_name }}" class="person-img person-image-small offset{{iter}}" title="{{ person.first_name }} {{ person.last_name }}" src="{{ site.baseurl }}{{ person.image }}" onmouseenter="highlightPerson('{{ person.key }}')" onmouseleave="clearClass('highlighted')">
   {% else %}
-    <img alt="{{ person.first_name }} {{ person.last_name }}" class="person-img person-image-small offset{{iter}}" title="{{ person.first_name }}  {{ person.last_name }}" src="http://www.centonovelosgatos.com/wp-content/uploads/2013/08/unknown-female.jpg">
+    <img alt="{{ person.first_name }} {{ person.last_name }}" class="person-img person-image-small offset{{iter}}" title="{{ person.first_name }}  {{ person.last_name }}" src="http://www.centonovelosgatos.com/wp-content/uploads/2013/08/unknown-female.jpg" onmouseenter="highlightPerson('{{ person.key }}')" onmouseleave="clearClass('highlighted')">
   {% endif %}
   </a>
   {% assign iter = iter | plus: 1 | modulo: 2 %}
