--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -23,6 +23,8 @@ layout: default
             {% assign ifmsstudent = 'true' %}
         {% elsif person.role == 'undergrad' %}
             {% assign ifundergrad = 'true' %}
+        {% elsif person.role == 'intern' %}
+            {% assign ifintern = 'true' %}
         {% endif %}
       {% endif %}
     {% endfor %}
@@ -65,6 +67,13 @@ layout: default
         <h1>Undergraduate Students</h1>
 
         {% include person.html role="undergrad" %}
+      {% endif %}
+
+      {% if ifintern == 'true' %}
+        <p class="space">&nbsp;</p>
+        <h1>Interns</h1>
+
+        {% include person.html role="intern" %}
       {% endif %}
       
       <p class="space-alumni">&nbsp;</p>
