--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -67,7 +67,9 @@ layout: default
             {% assign published-where = page.bib.publisher %}
           {% endif %}
 
-          {{ published-where }}, {% if page.bib.doi %} <a href="http://dx.doi.org/{{ page.bib.doi }}">doi:{{ page.bib.doi }}</a>, {%endif%}{{ page.year }}.
+
+
+          {{ published-where }}, {% if page.bib.volume %} {{ page.bib.volume }}{% endif %}{% if page.bib.number %}({{ page.bib.number }}){% endif %}{% if page.bib.volume or page.bib.issue %}:{% endif %}{% if page.bib.pages %} {{ page.bib.pages }}, {% endif %} {% if page.bib.doi %} <a href="http://dx.doi.org/{{ page.bib.doi }}">doi:{{ page.bib.doi }}</a>, {%endif%}{{ page.year }}.
         {% endif %}
         </span>
 
