--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -43,12 +43,12 @@
 .person-list-block {
   @include outer-container;
   @include span-columns(12);
-  margin: -6px 0 0 8px;
-  padding-top: 8px;
+  margin: 3px 0 0 3px;
+  padding-top: 2px;
   padding-left: 10px;
   display: block;
   border: 2px solid transparent;
-  min-height: 50px;
+  //min-height: 50px;
   
   .name {
     @include span-columns(6 of 16);
@@ -57,12 +57,13 @@
   
   .spacer {
     float: right;
-    margin-top: -3px;
+    margin-top: 1px;
     font-size: $page-content-font-size * 1.15;
     font-weight: 700;
     color: #3476A0;
     .dot {
-      margin: 0 1px 0 1px;
+      margin: 0px 1px 0 1px;
+      padding-bottom: 0px;
     }
     @include media($small-display) {
       display: none;
@@ -73,7 +74,10 @@
     @include span-columns(10 of 16);
     font-family: $condensed-font-family;
     font-size: $page-content-font-size * 0.75;
-    line-height: 1;
+    vertical-align: bottom;
+    line-height: 2;
+    bottom: 0;
+    right: 0;
   }
   
   .alumni {
@@ -130,7 +134,7 @@
     border-color: #E66558;
   }
   &.selected, &.highlighted {
-    box-shadow: 0 0 0 8px $team-color;
+    box-shadow: 0 0 3px 4px darkgray;
   }
 }
 
