added social activites

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -104,9 +104,37 @@ layout: default
         {% endif %}
       {% endfor %}
       </p>
-      
-  </article>
 
+
+
+
+      <p class="space-alumni">&nbsp;</p>
+      <br><br>
+    <h1>Lab Culture</h1>
+
+    Salt Lake City is a great place to do research, but also to play! Skiing, climbing, mountain biking, etc. is all immediately accessible in the vicinity. We care about the interactions in our team, so we have a series of activities to foster a collaborative atmosphere. You can get an impression on our <a href="https://goo.gl/photos/v1rN6bs6qBzSQYLL7">photo album</a>.
+
+    <h2>Group Meetings</h2>
+
+    We meet weekly as a group to discuss a research paper, give feedback on research proposals, give test-talks for conferences, and build other soft-skills. Our meetings include all our PostDocs and PhD students, but also MS and BS students interacting with the group.
+
+    <h2>Group Retreat</h2>
+
+      Once a year we go on a hike and meet for food and drinks at Miriah's or Alex' house afterwards. Here are some pictures from these events:
+
+      <img class="social" src="{{site.base_url}}/assets/images/social/2017_retreat.jpg" alt="2017 VDL Retreat">
+
+      <img class="social" src="{{site.base_url}}/assets/images/social/2016_retreat.jpg" alt="2016 VDL Retreat">
+
+<h2>Group Run</h2>
+
+      We jog together every Tuesday and Thursday! Check out our <a href="https://www.strava.com/clubs/vdl-running">Strava Club</a>.
+
+
+      <img class="social" src="{{site.base_url}}/assets/images/social/2017_run.jpg" alt="2017 VDL Jog">
+
+
+  </article>
 <script>
   // use a person's key to go to their anchor tag
   function selectPerson (key) {
