added culture to menu

--- a/css/site.scss
+++ b/css/site.scss
@@ -282,6 +282,9 @@ body {
   @include navigation-button($help-color);
 }
 
+.culture-button {
+  @include navigation-button($help-color);
+}
 
 .award{
   color: $publication-color
