stub for projects, outline for CAREER

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -54,10 +54,10 @@ layout: default
           {% endfor %}
           </ul>
 
-          {% if grant.partners %}
+          {% if page.partners %}
           <p>Partners: {{grant.partners}}</p>
           {%endif%}
-          <p></p>
+
         </div>
       </div>
       {% endfor %}
